Minor text edits to report

--- a/BBLReport.html
+++ b/BBLReport.html
@@ -299,8 +299,6 @@ and</p></li>
 
 <p><img src="D:/R/ESR505/figure/plot6_LM.png" alt="Natural Log transformed length and  weight during July, 2002."/> </p>
 
-<hr/>
-
 <p><strong>Table 1.  Linear Model.</strong></p>
 
 <pre><code>## 
@@ -322,6 +320,8 @@ and</p></li>
 ## Multiple R-squared:  0.973,  Adjusted R-squared:  0.973 
 ## F-statistic: 2.32e+04 on 1 and 651 DF,  p-value: &lt;2e-16
 </code></pre>
+
+<hr/>
 
 <p><img src="D:/R/ESR505/figure/plot7_Residuals1.png" alt="Linear fit model residuals plots."/> <img src="D:/R/ESR505/figure/plot7_Residuals2.png" alt="Linear fit model residuals plots."/> <img src="D:/R/ESR505/figure/plot7_Residuals3.png" alt="Linear fit model residuals plots."/> <img src="D:/R/ESR505/figure/plot7_Residuals4.png" alt="Linear fit model residuals plots."/> </p>
 
@@ -365,7 +365,7 @@ and</p></li>
 ##    0.39    0.98    1.05    1.05    1.11    3.24
 </code></pre>
 
-<p>The condition of most fish caught during this study were between 0.98 and 1.11 (Figure 9, Table 1), while the mean condition for the sampled population was 1.06.   Even though a comparison between years indicates improved condition, the relative condition of the fish compared to other healthy populations is in poor condition. This is primarily a result of very little predation and limited food due to an oligotrophic isolated alpine cirque lake habitat.</p>
+<p>The condition of most fish caught during this study were between 0.98 and 1.11 (Figure 9, Table 1), while the mean condition for the sampled population was 1.06.   Even though a comparison between years indicates improved condition, the relative condition of the fish compared to other healthy populations is poor. This is primarily a result of very little predation and limited food due to an oligotrophic isolated alpine cirque lake habitat.</p>
 
 <p><img src="D:/R/ESR505/figure/plot9_FultonK.png" alt="Fulton Conditon frequency histogram."/> </p>
 
